cache and logout issues

--- a/expensetracker/templates/expenses/stats.html
+++ b/expensetracker/templates/expenses/stats.html
@@ -32,4 +32,6 @@
 <script src={% static 'js/statsExpense.js' %}></script>
 <script src={% static 'js/statsIncome.js' %}></script>
 
+{{ redirect_to_login_immediatelly }}
+
 {% endblock %}
