--- a/expensetracker/templates/authentication/set-new-password.html
+++ b/expensetracker/templates/authentication/set-new-password.html
@@ -8,10 +8,10 @@
       {% csrf_token %}
       {% include 'partials/_messages.html' %}
       <div class="input-box">
-        <input name = "password" id="passwordField" type="password" placeholder="Create password" required>
+        <input name = "password" type="password" placeholder="Create password" required>
       </div>
       <div class="input-box">
-        <input name = "password2" id="passwordField2" type="password" placeholder="Confirm password" required>
+        <input name = "password2" id="passwordField" type="password" placeholder="Confirm password" required>
         <small class="show_pass">SHOW</small>
       </div>
       <div class="input-box button">
