--- a/expensetracker/templates/expenses/stats.html
+++ b/expensetracker/templates/expenses/stats.html
@@ -19,11 +19,11 @@
 <div class="charts">
 {% include 'partials/_messages.html' %}
 
-<div class="myChart">
+<div class="myChart" id="exp">
     <canvas id="myChartExp"></canvas>
 </div>
 
-<div class="myChart">
+<div class="myChart" id="inc">
   <canvas id="myChartInc"></canvas>
 </div>
 
