--- a/expensetracker/templates/expenses/stats.html
+++ b/expensetracker/templates/expenses/stats.html
@@ -20,10 +20,12 @@
 {% include 'partials/_messages.html' %}
 
 <div class="myChart" id="exp">
+  <h4> Expenses </h4>
     <canvas id="myChartExp"></canvas>
 </div>
 
 <div class="myChart" id="inc">
+  <h4> Income </h4>
   <canvas id="myChartInc"></canvas>
 </div>
 
