--- a/expensetracker/templates/authentication/reset-password.html
+++ b/expensetracker/templates/authentication/reset-password.html
@@ -9,11 +9,10 @@
       {% include 'partials/_messages.html' %}
       <h4>Please enter your e-mail address</h4>
       <div class="input-box">
-        <input name = "email" id="emailField" type="email" placeholder="Enter your email" value = "{{values.email}}" required>
+        <input name = "email" id="emailField1" type="email" placeholder="Enter your email" value = "{{values.email}}" required>
         <div class="email_feedback"></div>
-        <div class = "input-box">
-            <p>Already have an account?  </p><a href="{% url 'login'%}">Login now</a><br>
-            <p>Don't have an account?  </p><a href="{% url 'register'%}">Register now</a>
+        <div class = "input-box"><br><br>
+            <p> Back to login <a href="{% url 'login'%}">Login</a> </p> Not registered? <a href="{% url 'register'%}">Register now</a>
         </div>
     </div>
       <div class="input-box button">
